Dibuat menggunakan Colaboratory

--- a/examples/colab/tf2_text_classification.ipynb
+++ b/examples/colab/tf2_text_classification.ipynb
@@ -6,8 +6,7 @@
       "name": "basic-text-classification.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -583,17 +582,6 @@
         "          \"This movie is trash\"]\n",
         "test1 = np.array(review)\n",
         "model.predict(test1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "nR9ILijwFKna"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
